# Otskok

./: CMakeLists.txt  README.md  main.cpp
report/: 2023_1_Никитин_Фёдор.docx
src/: Ball.cpp  Ball.h  CMakeLists.txt  Circle.cpp  Circle.h  Draw.cpp  Engine.cpp  Engine.h  Function.cpp  Function.h  Input.cpp  Update.cpp  main.cpp
